devenv/manifests/package-manager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: package-manager
  namespace: wm-user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: package-manager
  template:
    metadata:
      labels:
        app: package-manager
    spec:
      serviceAccountName: package-manager
      containers:
      - name: package-manager
        image: kloudlite/package-manager:latest
        imagePullPolicy: Never
        volumeMounts:
        - name: nix-store-host
          mountPath: /nix
      volumes:
      - name: nix-store-host
        hostPath:
          path: /var/lib/kloudlite/nix-store
          type: DirectoryOrCreate
