devenv/manifests/workmachine-node-manager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workmachine-node-manager
  namespace: wm-user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workmachine-node-manager
  template:
    metadata:
      labels:
        app: workmachine-node-manager
    spec:
      serviceAccountName: workmachine-node-manager
      containers:
      - name: workmachine-node-manager
        image: kloudlite/workmachine-node-manager:latest
        imagePullPolicy: Never
        volumeMounts:
        - name: nix-store-host
          mountPath: /nix
      volumes:
      - name: nix-store-host
        hostPath:
          path: /var/lib/kloudlite/nix-store
          type: DirectoryOrCreate
