devenv/manifests/webhooks.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: kloudlite-validating-webhook
webhooks:
- name: users.platform.kloudlite.io
  clientConfig:
    service:
      name: nginx
      namespace: default
      path: /webhooks/validate/users
    caBundle: ${CA_BUNDLE}
  rules:
  - operations: ["CREATE", "UPDATE"]
    apiGroups: ["platform.kloudlite.io"]
    apiVersions: ["v1alpha1"]
    resources: ["users"]
  admissionReviewVersions: ["v1"]
  sideEffects: None
- name: environments.environments.kloudlite.io
  clientConfig:
    service:
      name: nginx
      namespace: default
      path: /webhooks/validate/environments
    caBundle: ${CA_BUNDLE}
  rules:
  - operations: ["CREATE", "UPDATE"]
    apiGroups: ["environments.kloudlite.io"]
    apiVersions: ["v1"]
    resources: ["environments"]
  admissionReviewVersions: ["v1"]
  sideEffects: None
- name: configmaps.core.envvars
  clientConfig:
    service:
      name: nginx
      namespace: default
      path: /webhooks/validate/configmaps
    caBundle: ${CA_BUNDLE}
  rules:
  - operations: ["CREATE", "UPDATE"]
    apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["configmaps"]
  admissionReviewVersions: ["v1"]
  sideEffects: None
  namespaceSelector:
    matchExpressions:
    - key: kloudlite.io/environment
      operator: Exists
  objectSelector:
    matchLabels:
      kloudlite.io/config-type: "envvars"
- name: secrets.core.envvars
  clientConfig:
    service:
      name: nginx
      namespace: default
      path: /webhooks/validate/secrets
    caBundle: ${CA_BUNDLE}
  rules:
  - operations: ["CREATE", "UPDATE"]
    apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["secrets"]
  admissionReviewVersions: ["v1"]
  sideEffects: None
  namespaceSelector:
    matchExpressions:
    - key: kloudlite.io/environment
      operator: Exists
  objectSelector:
    matchLabels:
      kloudlite.io/config-type: "envvars"
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: kloudlite-mutating-webhook
webhooks:
- name: users.platform.kloudlite.io
  clientConfig:
    service:
      name: nginx
      namespace: default
      path: /webhooks/mutate/users
    caBundle: ${CA_BUNDLE}
  rules:
  - operations: ["CREATE", "UPDATE"]
    apiGroups: ["platform.kloudlite.io"]
    apiVersions: ["v1alpha1"]
    resources: ["users"]
  admissionReviewVersions: ["v1"]
  sideEffects: None
- name: environments.environments.kloudlite.io
  clientConfig:
    service:
      name: nginx
      namespace: default
      path: /webhooks/mutate/environments
    caBundle: ${CA_BUNDLE}
  rules:
  - operations: ["CREATE", "UPDATE"]
    apiGroups: ["environments.kloudlite.io"]
    apiVersions: ["v1"]
    resources: ["environments"]
  admissionReviewVersions: ["v1"]
  sideEffects: None
